[package]
name = "bevy_networking"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_backroll = "0.1.0"
bitflags = "1.3.2"
bytemuck = "1.7.2"
backroll_transport_udp = "0.1.0"